# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Abhabongse Janthong"]
edition = "2021"
rust-version = "1.57"
description = "My solutions to Advent of Code 2021"
repository = "https://github.com/abhabongse/aoc2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
regex = "1.5"
structopt = "0.3"
thiserror = "1.0"
