# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Abhabongse Janthong"]
edition = "2021"
rust-version = "1.57"
description = "My solutions to Advent of Code 2021"
repository = "https://github.com/abhabongse/aoc2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
cgmath = "0.18"
euclid = "0.22.6"
itertools = "0.10.0"
lazy_static = "1.4.0"
matches = "0.1.9"
nalgebra = "0.29.0"
ndarray = "0.15.4"
num = "0.4"
ouroboros = "0.14.0"
regex = "1.5"
structopt = "0.3"
thiserror = "1.0"
