# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Abhabongse Janthong"]
edition = "2021"
rust-version = "1.57"
description = "My solutions to Advent of Code 2021"
repository = "https://github.com/abhabongse/aoc2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
clap = { version = "3.0", features = ["derive"] }
itertools = "0.10.0"
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
lazy_static = "1.4.0"
matches = "0.1.9"
nalgebra = "0.29.0"
num = "0.4"
paste = "1.0"
regex = "1.5"
thiserror = "1.0"

[build-dependencies]
lalrpop = "0.19.6"
